// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test base/page/CloudBeaver should match snapshot when sql query is disabled 1`] = `
<div>
  <div
    class="actiontech-page-header-namespace css-1xspr0w"
  >
    <div
      class="title"
    >
      SQL工作台
    </div>
    <div
      class="extra"
    />
  </div>
  <section
    class="css-ajpewd"
  >
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-vertical css-1ago99h"
    >
      <div
        class="ant-space-item"
      >
        <div
          class="ant-card ant-card-bordered css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-card-body"
          >
            <div
              class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
            >
              <div>
                <div
                  aria-busy="true"
                  aria-live="polite"
                  class="ant-spin ant-spin-spinning css-dev-only-do-not-override-txh9fw"
                >
                  <span
                    class="ant-spin-dot ant-spin-dot-spin"
                  >
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                  </span>
                </div>
              </div>
              <div
                class="ant-spin-container ant-spin-blur"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      aria-label="warning"
                      class="anticon anticon-warning css-hvou6e"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="warning"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M464 720a48 48 0 1096 0 48 48 0 10-96 0zm16-304v184c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V416c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8zm475.7 440l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zm-783.5-27.9L512 239.9l339.8 588.2H172.2z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      该环境未配置SQL查询，请设置后再使用
                      。
                      配置方式及使用说明请查看使用文档
                      <a
                        href="https://actiontech.github.io/sqle-docs-cn/3.modules/4.2_sql_editor/overview.html"
                        rel="noreferrer"
                        target="_blank"
                      >
                        点击此处
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`test base/page/CloudBeaver should match snapshot when sql query is disabled 2`] = `
<div>
  <div
    class="actiontech-page-header-namespace css-1xspr0w"
  >
    <div
      class="title"
    >
      SQL工作台
    </div>
    <div
      class="extra"
    />
  </div>
  <section
    class="css-ajpewd"
  >
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-vertical css-1ago99h"
    >
      <div
        class="ant-space-item"
      >
        <div
          class="ant-card ant-card-bordered css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-card-body"
          >
            <div
              class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      aria-label="warning"
                      class="anticon anticon-warning css-hvou6e"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="warning"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M464 720a48 48 0 1096 0 48 48 0 10-96 0zm16-304v184c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V416c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8zm475.7 440l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zm-783.5-27.9L512 239.9l339.8 588.2H172.2z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      该环境未配置SQL查询，请设置后再使用
                      。
                      配置方式及使用说明请查看使用文档
                      <a
                        href="https://actiontech.github.io/sqle-docs-cn/3.modules/4.2_sql_editor/overview.html"
                        rel="noreferrer"
                        target="_blank"
                      >
                        点击此处
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`test base/page/CloudBeaver should render jump to cloud beaver when sql query is enable 1`] = `
<div>
  <div
    class="actiontech-page-header-namespace css-1xspr0w"
  >
    <div
      class="title"
    >
      SQL工作台
    </div>
    <div
      class="extra"
    />
  </div>
  <section
    class="css-ajpewd"
  >
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-vertical css-1ago99h"
    >
      <div
        class="ant-space-item"
      >
        <div
          class="ant-card ant-card-bordered css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-card-body"
          >
            <div
              class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-spin-container"
              >
                <a
                  class="ant-typography css-dev-only-do-not-override-txh9fw"
                >
                  打开SQL工作台
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
